--- a/AugJS/index.html
+++ b/AugJS/index.html
@@ -3,17 +3,47 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>AugJS</title>
+		<style type="text/css">
+			* {
+				font-family: Arial, Helvetica, Tahoma;
+				font-size: 12px;
+			}
+			
+			#container div {
+				padding: 5px;
+			}
+		</style>
 	</head>
 	<body>
-		
+		<div id="container">
+			<div>
+				<button id="btn-msg-auto-hide">Message Auto Hide</button>
+			</div>
+			<div>
+				<button id="btn-msg-confirm">Message Confirm</button>
+			</div>
+		</div>
 		<script type="text/javascript" src="vendor/jquery/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="dist/augjs.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(e) {
-				$.msg('test', {
-					css: {
-						border: '1px solid #ddd'
-					}
+				$('#btn-msg-auto-hide').on('click', function() {
+					$.msgAutoHide('Test the message place here');
+				});
+				
+				$('#btn-msg-confirm').on('click', function() {
+					$.msgConfirm('Test the message place here', {
+						title: 'This is title',
+						button: {
+							yes: 'Đồng ý',
+							no: 'Không'
+						}
+					}, function() {
+						$.msgAutoHide('You are comfirmed!');
+					}, function() {
+						$.msgAutoHide('You are not confirm!');
+					});
+					
 				});
 			});
 		</script>
