--- a/AugJS/index.html
+++ b/AugJS/index.html
@@ -50,7 +50,9 @@
 				});
 
 				$('#btn-msg').on('click', function() {
-					$.msg('Test the message place here');
+					$.msg('Test the message place here', {
+						type: 'danger'
+					});
 				});
 			});
 		</script>
